<resources>
    <string name="app_name">Cheers</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="liter">L</string>
    <string name="percent">%</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="stop">Stop</string>

    <string name="fragment_categories">Counters</string>
    <string name="fragment_beverages">Beverages</string>
    <string name="fragment_beverage">Beverage</string>

    <string name="new_counter_menu_item">New counter</string>
    <string name="stop_counter_menu_item">Stop counter</string>
    <string name="delete_counter_menu_item">Delete counter</string>
    <string name="select_all_menu_item">Select all</string>

    <string name="beverage_name_label">Beverage name</string>
    <string name="alcohol">Alcohol</string>
    <string name="volume">Volume</string>

    <string name="dialog_new_counter_title">New counter</string>
    <string name="dialog_new_counter_empty_name">Name must be at least 1 character long</string>
    <string name="dialog_new_counter_volume_zero">Volume must be larger than 0</string>
    <string name="dialog_new_counter_alcohol_zero">Alcohol must be at least 0</string>
    <string name="dialog_new_counter_general_error">Something went wrong while creating new counter</string>

    <plurals name="dialog_delete_counters_title">
        <item quantity="one">Delete "%s" counter?</item>
        <item quantity="other">Delete %s counters?</item>
    </plurals>

    <plurals name="dialog_stop_counters_title">
        <item quantity="one">Stop "%s" counter?</item>
        <item quantity="other">Stop %s counters?</item>
    </plurals>
</resources>