<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:label="@string/fragment_categories"
        android:name="cz.johnyapps.cheers.categories.CategoriesFragment"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/beveragesFragment"
        android:name="cz.johnyapps.cheers.beverages.BeveragesFragment"
        android:label="@string/fragment_beverages"
        tools:layout="@layout/fragment_beverages" >
        <action
            android:id="@+id/actionOpenBeverage"
            app:destination="@id/beverageFragment" />
    </fragment>

    <fragment
        android:id="@+id/beverageFragment"
        android:name="cz.johnyapps.cheers.beverage.BeverageFragment"
        android:label="@string/fragment_beverage"
        tools:layout="@layout/fragment_beverage" >
        <argument
            android:name="beverage_id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>